# nrf-cmake

./: CMakeLists.txt  README.md
libs/hello/: CMakeLists.txt
libs/hello/include/: hello.h
libs/hello/src/: hello.c
projects/lightstack/: CMakeLists.txt
projects/lightstack/include/: stack.h
projects/lightstack/src/: main.c
